--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,11 @@
 
 trigger:
 - master
-
+- aljonn_feature
+- hoon_feature
+- jae_feature
+- sandy_feature
+- pascal_feature
 pool:
   vmImage: ubuntu-latest
 
